@@ -38,8 +38,8 @@ dependencies {
 
   //  api 'org.jetbrains.trove4j:trove4j:20160824'
    // api files('libs/kotlin-compiler-embeddable-1.7.20-RC.jar')
-    api files('libs/kotlin-compiler-2.0.0.jar')
-	//api 'org.jetbrains.kotlin:kotlin-compiler-embeddable:2.0.0'
+  //  api files('libs/kotlin-compiler-2.0.0.jar')
+	api 'org.jetbrains.kotlin:kotlin-compiler-embeddable:2.2.21'
 	api files('libs/javax.jar')
     compileOnly files('libs/the-unsafe.jar')
     compileOnly project(path: ':android-stubs')
@@ -62,20 +62,4 @@ spotless {
 			target "**/*.java"
 			googleJavaFormat()
 			}
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += [
-        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
-    ]
 }
